# ChangeLog for x11-libs/libwnck
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.230 2010/01/16 17:11:19 armin76 Exp $

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org> libwnck-2.26.2-r2.ebuild:
  sh stable

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> libwnck-2.26.2-r2.ebuild:
  Stable for HPPA (bug #281427).

  03 Dec 2009; Brent Baude <ranger@gentoo.org> libwnck-2.26.2-r2.ebuild:
  Marking libwnck-2.26.2-r2 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> libwnck-2.26.2-r2.ebuild:
  alpha/ia64/sparc stable wrt #281427

  05 Nov 2009; Markus Meier <maekke@gentoo.org> libwnck-2.26.2-r2.ebuild:
  arm stable, bug #281427

*libwnck-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -libwnck-2.26.2.ebuild, -libwnck-2.26.2-r1.ebuild, +libwnck-2.28.0.ebuild:
  New version for GNOME 2.28. Clean up old revision.

  24 Oct 2009; nixnut <nixnut@gentoo.org> libwnck-2.26.2-r2.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org> libwnck-2.26.2-r2.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> libwnck-2.26.2-r2.ebuild:
  Stable on amd64, bug #281427

  09 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  libwnck-2.26.2-r2.ebuild:
  Fix build with libtool-1, bug #280876.

*libwnck-2.26.2-r2 (09 Aug 2009)

  09 Aug 2009; Arun Raghavan <ford_prefect@gentoo.org>
  +libwnck-2.26.2-r2.ebuild, +files/libwnck-2.26.2-fix-glib-mkenums.diff:
  Fix glib-mkenums command-line in Makefile.am (bug 279832)

  08 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  libwnck-2.26.2-r1.ebuild:
  Add gnome-common to DEPEND, bug #280838.

*libwnck-2.26.2-r1 (08 Aug 2009)

  08 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -libwnck-2.26.1.ebuild, +libwnck-2.26.2-r1.ebuild,
  +files/libwnck-2.26.2-automagic.patch:
  Version bump. Make startup-notification non-automagic, bug #278464. Clean