@@ -7,6 +7,6 @@ DIST libwnck-2.28.0.tar.bz2 712289 RMD160 d088c079a48ede297e7de5438b14ae66043c44
 EBUILD libwnck-2.20.3.ebuild 707 RMD160 825dba603bfe4adce1fba34eda916d0fc898f6de SHA1 c7b7b290cd1fd8759d7eced8444fd2d34e098259 SHA256 176f43623ff6325d16f34d05e42c2a3fad22b6d1deb8580d2d78c17a341b02dd
 EBUILD libwnck-2.24.2.ebuild 882 RMD160 d9420c2610b73f662ad5a84b73256c40c3981208 SHA1 832909ae060b538b93ec47c7efdd546cc3190922 SHA256 32047228e82a595396e3443ef5d186d5d2afbe326f934cdef1c5b399e0e343e5
 EBUILD libwnck-2.26.2-r2.ebuild 1573 RMD160 06261d48a35500c4652fe4f9fe5126d8a23ecb05 SHA1 ca57ca93fac2c0f281b651c1672de78f59ff8032 SHA256 88bf4163a598bd8a7ef9ad03197f3a203e55798a9f3d0e23912b549e25fe4c34
-EBUILD libwnck-2.28.0.ebuild 1478 RMD160 bfedcdbaf94b9a2705c3a2614dccdd3156c359a3 SHA1 52c3e7cc3771fe28c34b47eb6386de8685b0eba5 SHA256 45a60f258a96413672c946e643fdb445c3e1687b3dbc531de69c9122ff17e379
-MISC ChangeLog 27562 RMD160 212bce569ac23535d9f740c74c9b508456da349a SHA1 c55979a02bfb60adde87f060c5a8c7eee9e06cec SHA256 b89c7c6933b1cb0a6cb93814f70d338938dbac0fe8c99e08c1eb5d531c4bba42
+EBUILD libwnck-2.28.0.ebuild 1679 RMD160 ac8608f737222fd23afcef4df1daeb90d8ad07b1 SHA1 1b0b45571ff77491105844e0968d8a7575842c48 SHA256 8aac7cd9b77086d57afd742127497331d893a0994aecca3cff52c9137e421ad2
+MISC ChangeLog 27697 RMD160 42e2a9df9a0433698e6caf08ae70049ee4c17018 SHA1 1e6afa95c0b1754eb7d267b226ed2e612f72ff28 SHA256 75ba011c8fdf902cb0dd17af5388a16d4493ffdb967297bc406882a72adadd38
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
