@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libwnck
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.230 2010/01/16 17:11:19 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.231 2010/02/23 14:52:38 fauli Exp $
+
+  23 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
+  libwnck-2.28.0.ebuild:
+  Use libresolv from sys-libs/itx-bin on Interix Prefix
 
   16 Jan 2010; Raúl Porcel <armin76@gentoo.org> libwnck-2.26.2-r2.ebuild:
   sh stable
